--- a/requirements.txt
+++ b/requirements.txt
@@ -52,6 +52,7 @@ idna==3.3
 imbalanced-learn==0.10.0
 imblearn==0.0
 importlib-metadata==6.0.0
+install==1.3.5
 ipykernel==6.15.2
 ipython==8.4.0
 ipython-genutils==0.2.0
@@ -131,6 +132,7 @@ Pygments==2.14.0
 pylev==1.4.0
 Pympler==1.0.1
 pyparsing==3.0.9
+pypiwin32==223
 pyproj==3.4.0
 pyrsistent==0.18.1
 pyshp==2.3.1
@@ -140,8 +142,8 @@ python-dateutil==2.8.2
 python-pptx==0.6.21
 pytz==2022.2.1
 pytz-deprecation-shim==0.1.0.post0
-#pywin32==223
-#pywin32-ctypes==0.2.0
+pywin32==304
+pywin32-ctypes==0.2.0
 pywinpty==2.0.7
 pyzmq==23.2.1
 qdldl==0.1.5.post2
