--- a/requirements.txt
+++ b/requirements.txt
@@ -120,7 +120,7 @@ poetry-plugin-export==1.0.6
 polar==0.0.118
 prometheus-client==0.14.1
 prompt-toolkit==3.0.31
-protobuf==3.20.3
+protobuf>=4.21.5
 psutil==5.9.2
 ptyprocess==0.7.0
 pure-eval==0.2.2
