--- a/requirements.txt
+++ b/requirements.txt
@@ -110,7 +110,7 @@ plotly==5.10.0
 polar==0.0.118
 prometheus-client==0.14.1
 prompt-toolkit==3.0.31
-protobuf>=3.12
+protobuf==3.15
 psutil==5.9.2
 ptyprocess==0.7.0
 pure-eval==0.2.2
